<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_pressure1"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_pressure2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_pressure"
            android:textSize="24dp"
         />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:gravity="center"
            android:padding="14dp">

            <EditText
                android:id="@+id/inp_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_weight="40"
                android:textSize="24dp"
                android:background="@android:drawable/edit_text" />

            <Spinner
                android:id="@+id/sp_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginLeft="10dp"
                android:textSize="24dp"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/pressure_unit" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_height"
            android:textSize="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:gravity="center"
        android:padding="14dp">

        <EditText
            android:id="@+id/inp_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="30"
            android:textSize="24dp"
            android:background="@android:drawable/edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_unit"
            android:layout_weight="10"
            android:layout_marginLeft="10dp"
            android:textSize="24dp" />
    </LinearLayout>
        <Button
            android:id="@+id/btn_start_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/btn_start"/>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>